# anki-sound-downloader

./: LICENSE  Makefile  README.md  install.sh  pyproject.toml  requirements.txt  run.sh
src/: main.py
src/handlers/: naver_tts.py
